--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -16,7 +16,7 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />	
  
     <!-- Required to show current location -->
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
@@ -41,7 +41,10 @@
                   ></activity>
         <activity android:name=".MapsActivity"
             	  android:theme="@style/Theme.AppCompat.Light"
-                  android:label="Plain Map View"></activity>
+                  android:label="Nearby from foursquare">
+            <meta-data android:name="android.app.searchable"
+            android:resource="@xml/searchable" />
+        </activity>
         <activity android:name="SearchActivity"
             	  android:label="Select the coordinates"></activity>
         
