--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -16,10 +16,9 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />	
  
     <!-- Required to show current location -->
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
  
     <!-- Required OpenGL ES 2.0. for Maps V2 -->
@@ -38,9 +37,16 @@
  
         <!--  Entry for RegisterActivity.class -->
         <activity android:name=".RegisterActivity"
-                  android:label="Register New Account"></activity>
+                  android:label="Register New Account"
+                  ></activity>
         <activity android:name=".MapsActivity"
-                  android:label="Plain Map View"></activity>
+            	  android:theme="@style/Theme.AppCompat.Light"
+                  android:label="Nearby from foursquare">
+            <meta-data android:name="android.app.searchable"
+            android:resource="@xml/searchable" />
+        </activity>
+        <activity android:name="SearchActivity"
+            	  android:label="Select the coordinates"></activity>
         
         <activity android:name="com.foursquare.android.nativeoauth.TokenExchangeActivity"
 		      	  android:theme="@android:style/Theme.Dialog"></activity>
