--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -45,6 +45,7 @@
         <activity android:name=".ChangeLocation"
             	  android:label="Change current location view"></activity>
         <activity android:name=".MapsActivity"
+               	  android:windowSoftInputMode="stateHidden|adjustResize"
             	  android:theme="@style/Theme.AppCompat.Light"
                   android:label="Nearby from foursquare">
             <meta-data android:name="android.app.searchable"
