--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.projectx.loginandmaps"
-    android:versionCode="1"
+    android:versionCode="3"
     android:versionName="1.0" >
     
     <permission
@@ -47,7 +47,7 @@
         <activity android:name=".MapsActivity"
                	  android:windowSoftInputMode="stateHidden|adjustResize"
             	  android:theme="@style/Theme.AppCompat.Light"
-                  android:label="Nearby From Google">
+                  android:label="Nearby from foursquare">
             <meta-data android:name="android.app.searchable"
             android:resource="@xml/searchable" />
         </activity>
