--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.projectx.loginandmaps"
-    android:versionCode="3"
+    android:versionCode="4"
     android:versionName="1.0" >
     
     <permission
@@ -47,7 +47,7 @@
         <activity android:name=".MapsActivity"
                	  android:windowSoftInputMode="stateHidden|adjustResize"
             	  android:theme="@style/Theme.AppCompat.Light"
-                  android:label="Nearby from foursquare">
+                  android:label="Nearby from Google">
             <meta-data android:name="android.app.searchable"
             android:resource="@xml/searchable" />
         </activity>
@@ -58,6 +58,13 @@
 		      	  android:theme="@android:style/Theme.Dialog"></activity>
         <activity android:name="AddCard"
             	  android:label="Add a card"></activity>
+        
+        <activity android:name="com.facebook.LoginActivity"
+                  android:theme="@android:style/Theme.Translucent.NoTitleBar"
+                  android:label="@string/app_name" />
+        <meta-data android:name="com.facebook.sdk.ApplicationId" android:value="@string/app_id"/>
+        <!-- <provider android:authorities="com.facebook.app.NativeAppCallContentProvider233936543368280"
+                  android:name="com.facebook.NativeAppCallContentProvider" /> -->
         <!-- Goolge Maps API Key -->
 		<meta-data
 		     android:name="com.google.android.maps.v2.API_KEY"
